@@ -55,6 +55,10 @@ Library
   guaranteed to be safe interp argument given to the PythonCmd in place of
   the Tcl interpreter taken from a PythonCmd_ClientData.
 
+- Issue #5828 (Invalid behavior of unicode.lower): Fixed bogus logic in
+  makeunicodedata.py and regenerated the Unicode database (This fixes
+  u'\u1d79'.lower() == '\x00').
+
 - Issue #5193: Guarantee that tkinter.Text.search returns a string.
 
 - Issue #5334: array.fromfile() failed to insert values when EOFError was
